Hello World & User

--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Olá mundo!</title>
+    <title>Atividades JN</title>
+    <script type="text/javascript" src="scripts/hello-world.js"></script>
+    <script type="text/javascript" src="scripts/hello-user.js"></script>
 </head>
 <body>
-    Olá mundo!
+    <button onclick="HelloWorld()">Hello World!</button>
+    <button onclick="HelloUser()">Hello User</button>
 </body>
 </html>
