--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <title>Atividades JN</title>
     <script type="text/javascript" src="scripts/hello-world.js"></script>
     <script type="text/javascript" src="scripts/hello-user.js"></script>
+    <script type="text/javascript" src="scripts/operacoes-basicas.js"></script>
 </head>
 <body>
     <button onclick="HelloWorld()">Hello World!</button>
     <button onclick="HelloUser()">Hello User</button>
+    <button onclick="OperacoesBasicas()">Operações Básicas</button>
 </body>
 </html>
