--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <title>Atividades JN</title>
+
+    <link rel="stylesheet" href="css/style.css">
+
     <script type="text/javascript" src="scripts/hello-world.js"></script>
     <script type="text/javascript" src="scripts/hello-user.js"></script>
     <script type="text/javascript" src="scripts/operacoes-basicas.js"></script>
