--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
     <script type="text/javascript" src="scripts/operacoes-basicas.js"></script>
 </head>
 <body>
-    <button onclick="HelloWorld()">Hello World!</button>
-    <button onclick="HelloUser()">Hello User</button>
-    <button onclick="OperacoesBasicas()">Operações Básicas</button>
+    <h1>Atividades</h1>
+    <div>
+        <button onclick="HelloWorld()">Hello World!</button>
+        <button onclick="HelloUser()">Hello User</button>
+        <button onclick="OperacoesBasicas()">Operações Básicas</button>
+    </div>
+
+
 </body>
 </html>
