Centralização de elementos

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <h1>Atividades</h1>
-    <div>
+    <div class="container">
         <button onclick="HelloWorld()">Hello World!</button>
         <button onclick="HelloUser()">Hello User</button>
         <button onclick="OperacoesBasicas()">Operações Básicas</button>
